welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:18: error: ')' expected but 'if' found.
  if (litMessage() == "B" {
  ^BDRBuggle:22: error: ')' expected but 'if' found.
  if (litMessage() == "C") {
  ^BDRBuggle:27: error: ';' expected but 'if' found.
  if (litMessage() == "Z") {
  ^